--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Welcome to practice merge code!</h1>
+    <h2>Hello student today we have quiz please review lesson 10min!</h2>
+
 </body>
 </html>
