--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to practice merge code!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur porro aspernatur cum dignissimos quisquam nemo cumque pariatur tempora doloremque autem.</p>
 </body>
 </html>
